# gm_turbostroi

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_for_test.sh  build_premake.sh  premake5.lua  raw_build.sh
gmsv_turbostroi_win32/: gmsv_turbostroi_win32.cpp
include/: stdafx.h
src/: auxiliary.cpp  auxiliary.h  from_source_sdk.cpp  from_source_sdk.h  gmsv_turbostroi.cpp  gmsv_turbostroi.h  spsc_queue.h  test_turbostroi.cpp
